fix: temperature text align

--- a/src/components/CurrentForecast/CurrentForecast.scss
+++ b/src/components/CurrentForecast/CurrentForecast.scss
@@ -19,7 +19,6 @@
 
   &__temp {
     flex: 0 1 auto;
-    text-align: center;
 
     &-current {
       margin: 0;
